--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ body {
 		</style>
 		<link id='-gd-engine-icon' rel='icon' type='image/png' href='WebGL-Test.icon.png' />
 <link rel='apple-touch-icon' href='WebGL-Test.apple-touch-icon.png'/>
-
+<script src="coi-serviceworker.js"></script>
 	</head>
 	<body>
 		<canvas id="canvas">
@@ -137,7 +137,7 @@ body {
 
 		<script src="WebGL-Test.js"></script>
 		<script>
-const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"WebGL-Test","experimentalVK":false,"fileSizes":{"WebGL-Test.pck":58800,"WebGL-Test.wasm":49005737},"focusCanvas":true,"gdextensionLibs":[]};
+const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"WebGL-Test","experimentalVK":false,"fileSizes":{"WebGL-Test.pck":58592,"WebGL-Test.wasm":49005737},"focusCanvas":true,"gdextensionLibs":[]};
 const engine = new Engine(GODOT_CONFIG);
 
 (function () {
